# Vaultro-Wallet

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/seed-input/[typeSeed]/: page.tsx
frontend/src/components/ui/: EntryComponents.tsx  SeedPhraseInput.tsx
