[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
ethers = { version = "2", features = ["abigen", "contract", "providers", "signers"] }
bdk = "0.29"
solana-client = "1.18"
solana-sdk = "1.18"
